# codr

./: pyproject.toml
codr/: __init__.py  cli.py
tests/: test_codr.py
