[tool.poetry]
name = "codr"
version = "0.1.0"
description = ""
authors = ["Adam Parkin <pzelnip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bullet = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]
codr = "codr.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = [ "py39",]
